# indexpilot

./: .bashrc  .env.production.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  ALL_INTEGRATIONS_COMPLETE.md  AUDIT_FLOW.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  ENHANCEMENT_STATUS.md  ERROR_CHECK_SUMMARY.md  EXPLAIN_INTEGRATION_STATUS.md  EXPLAIN_PHASE3_COMPLETED.md  FINAL_INTEGRATION_VERIFICATION.md  FINAL_PHASE3_COMPLETION.md  FRAMEWORK_INTEGRATIONS_COMPLETED.md  IMPLEMENTATION_ANALYSIS.md  IMPLEMENTATION_REVIEW_AND_FIXES.md  IMPLEMENTATION_ROUTING.md  INTEGRATION_COMPLETENESS_REPORT.md  MANIFEST.in  Makefile  PHASE_3_ENHANCEMENTS_COMPLETED.md  PRODUCTION_DEPLOYMENT_ANALYSIS.md  PRODUCT_ENHANCEMENT_ROADMAP.md  QUERY_INTERCEPTION_PHASE2_COMPLETED.md  QUICK_FIX_CURSOR_ISSUES.md  QUICK_START.md  README.md  SECURITY.md  SIMULATION_RESULTS_REPORT.md  THIRD_PARTY_ATTRIBUTIONS.md  action.yml  agents.yaml  docker-compose.yml  (+40 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
commands/: IMPLEMENTATION_ROUTING.md
docs/: AI_DISCOVERY.md  ALGORITHM_FIRING_ANALYSIS.md  ALGORITHM_FIRING_FIX.md  ALGORITHM_FIRING_STATUS.md  ALGORITHM_FIRING_SUMMARY.md  API_ROUTES_STATUS.md  AUTO_DISCOVERY_USAGE.md  CLEANUP_SUMMARY.md  CODE_PROTECTION_ANALYSIS.md  COMPETITIVE_ENHANCEMENTS_COMPLETED.md  COMPLETE_POLISH_STATUS_08-12-2025.md  COMPREHENSIVE_MODE_ANALYSIS.md  COMPREHENSIVE_MODE_FIX_SUMMARY.md  COMPREHENSIVE_STATUS_REPORT.md  CURRENT_STATUS_SSL_AND_MEMORY.md  DEPLOYMENT_STRATEGY.md  DOCKER_WINDOWS_SETTINGS_GUIDE.md  DOCUMENTATION_COVERAGE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_ORGANIZATION.md  DOCUMENTATION_UPDATE_08-12-2025.md  DOCUMENTATION_UPDATE_SUMMARY_08-12-2025.md  DYNAMIC_MEMORY_CONFIGURATION.md  ENHANCEMENT_STATUS_AND_LIFECYCLE_POLISH_08-12-2025.md  ERROR_ANALYSIS_08-12-2025.md  ERROR_FIXES_08-12-2025.md  ERROR_FIXES_COMPLETE_08-12-2025.md  FEATURE_INTEGRATION_STATUS_REPORT.md  FRONTEND_BACKEND_INTEGRATION_STATUS.md  FRONTEND_READINESS_REPORT.md  GITHUB_ACTIONS.md  GITIGNORE_AUDIT.md  GIT_REPOSITORY_STATUS_08-12-2025.md  GRACEFUL_ERROR_HANDLING_EXPLANATION.md  GRACEFUL_EXPLANATION.md  INSTALLATION.md  INTEGRATION_AUDIT_REPORT.md  INTEGRATION_COMPLETION_SUMMARY.md  INTEGRATION_READINESS_REPORT.md  LIFECYCLE_POLISH_INTEGRATION_08-12-2025.md  (+32 more)
indexpilot/: __init__.py  __main__.py  cli.py  cli_help.py  dashboard_assets.py
scripts/: agent_skill_router.py  assess_setup.py  build_dashboard_assets.py  check_release_surface_sync.py  check_simulation_status.py  check_unsafe_db_access.py  compare_ssl_performance.py  detect_cursor_usage.py  generate_final_reports.py  generate_ssl_certificates.bat  generate_ssl_certificates.sh  install_unicode_support.py  production_backup.sh  production_deploy.sh  production_validation.py  run_all_sim_combinations.py  run_simulations.py  run_small_sims_and_improve.py  run_ssl_comparison.sh  setup_sakila.py  setup_stock_data.py  standardize_cursors.py  track_history.py  update_postgres_memory_config.py  workload_dna_report.py
src/: __init__.py  adapters.py  adaptive_safeguards.py  advanced_simulation.py  algorithm_tracking.py  api_auth.py  api_server.py  approval_workflow.py  audit.py  auto_indexer.py  before_after_validation.py  bypass_config.py  bypass_status.py  composite_index_detection.py  concurrent_index_monitoring.py  config_loader.py  cpu_throttle.py  db.py  error_handler.py  expression.py  foreign_key_suggestions.py  genome.py  graceful_shutdown.py  health_check.py  index_cleanup.py  index_health.py  index_lifecycle_advanced.py  index_lifecycle_manager.py  index_retry.py  index_scheduler.py  index_type_selection.py  lock_manager.py  maintenance.py  maintenance_window.py  materialized_view_support.py  memory_config.py  ml_query_interception.py  monitoring.py  paths.py  pattern_detection.py  (+36 more)
(+416 files in other folders)
