[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indexpilot"
version = "1.1.0a8"
description = "Stop bad PostgreSQL indexes before they reach production"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "IndexPilot contributors" }]
keywords = [
  "postgresql",
  "indexing",
  "performance",
  "hypopg",
  "database",
  "database-migrations",
  "ci",
  "github-actions",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Quality Assurance",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
]
dependencies = [
  "psycopg2-binary>=2.9.9,<3",
  "python-dotenv>=1.2.2,<2",
  "psutil>=5.9.6,<8",
  "PyYAML>=6.0,<7",
  "sqlglot>=30.12,<31",
  "typing-extensions>=4.12,<5",
]

[project.optional-dependencies]
api = ["fastapi>=0.115,<1", "uvicorn[standard]>=0.32,<1"]
ml = ["numpy>=1.24.3,<3", "scipy>=1.11.4,<2", "scikit-learn>=1.3.2,<2", "xgboost>=2.1,<4"]
dev = [
  "build>=1.2,<2",
  "httpx>=0.27,<1",
  "mypy>=1.7,<2",
  "pytest>=9.0.3,<10",
  "ruff>=0.1.6,<1",
  "types-psycopg2>=2.9",
  "types-psutil>=7.0",
  "types-PyYAML>=6.0",
]

[project.scripts]
indexpilot = "indexpilot.cli:main"
indexpilot-api = "indexpilot.cli:api_main"
indexpilot-dashboard = "indexpilot.cli:dashboard_main"
indexpilot-dna = "indexpilot.cli:dna_main"
indexpilot-review = "indexpilot.cli:review_main"

[project.entry-points."pipx.run"]
indexpilot = "indexpilot.cli:main"

[project.urls]
Homepage = "https://eyeinthesky6.github.io/indexpilot/"
Repository = "https://github.com/eyeinthesky6/indexpilot"
Issues = "https://github.com/eyeinthesky6/indexpilot/issues"
Documentation = "https://github.com/eyeinthesky6/indexpilot#readme"
Changelog = "https://github.com/eyeinthesky6/indexpilot/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["indexpilot*", "src*"]
exclude = ["tests*", "ui*"]

[tool.setuptools.package-data]
indexpilot = ["dashboard_static/*", "dashboard_static/**/*"]
